# specink

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SPECINK_PROMPT.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.specink/changes/add-cicd-pipeline/: tasks.md  transcript.md
.specink/changes/add-cicd-pipeline/specs/: spec.md
.specink/changes/archive/2026-04-23-initial-build/: proposal.md  transcript.md
.specink/changes/archive/2026-04-24-add-cicd-pipeline/: design.md  proposal.md
.specink/changes/archive/2026-04-24-add-cicd-pipeline/specs/: spec.md
.specink/changes/initial-build/: decisions.md
specink/: __init__.py  cli.py
specink/commands/: apply.py  archive.py  conflicts.py  decision.py  drift.py  init.py  list.py  propose.py  show.py  status.py  transcript.py  verify.py
specink/core/: __init__.py  change.py  config.py  conflicts.py  decisions.py  drift.py  spec.py  transcript.py
specink/templates/: design.md  proposal.md  tasks.md
tests/: __init__.py  test_change.py  test_config.py  test_conflicts.py  test_decisions.py  test_drift.py  test_spec.py  test_transcript.py
